package taller.taller3;

public class SubwayCentral {

    private double rideCost;

    public SubwayCentral(double cost) {
        rideCost = cost;
    }

    public double getRideCost() {
        return rideCost;
    }

    public void setRideCost(double cost) {
        rideCost = cost;
    }

}
