@startuml
'https://plantuml.com/sequence-diagram

abstract class SubwayCard {
    -SubwayCentral central
    +SubwayCard(SubwayCentral sc)
    #double rideCost()
    #{abstract}boolean canRide()
    +{abstract}void ride()
}

SubwayCard <|-- FixedSubwayCard
SubwayCard <|-- RechargableSubwayCard
SubwayCard *-- SubwayCentral

class FixedSubwayCard {
    -int rides
    +FixedSubwayCard(int rides, SubwayCentral sc)
    #int canRide()
    +void ride()
}

class RechargableSubwayCard {
    -double balance
    +RechargableSubwayCard(SubwayCentral sc)
    +void recharge(doble amount)
    +void ride()
    #int canRide()
    #double rideCost()
}

RechargableSubwayCard <|-- RechargableDiscountSubwayCard

class RechargableDiscountSubwayCard {
    -double discount
    +RechargableSubwayCard(SubwayCentral sc, double dc)
    #double rideCost()
}

class SubwayCentral {
    -double rideCost()
    +SubwayCentral(double rideCost)
    +void setRideCost(double cost)
    +double getRideCost()
}



@enduml